tests/expectations/parser/structs/comma_separators_fail.out
Error [EPAR0370005]: expected '}', ',', '?' -- found 'y'
    --> test:9:5
     |
   9 |     y: u8
     |     ^
